objects/tffa__QuestionTemplate__c.object
<CustomObject>
    <description>Describes each question. Enables the capture of different types of answers.</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state.</description>
        <formula>tffa__Disabled__c = False</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AnswerType__c</fullName>
        <defaultValue>&quot;TEXT&quot;</defaultValue>
        <description>Type of answer field.</description>
        <label>Answer type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AnswerType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Choices__c</fullName>
        <description>A JSON string representing a choice array (  { name: String, value: String }[] ). Each choice has a name which is the label or display name or text of the choice and a value which is the value or id of the choice. Used when the answer field is of type SELECT.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Options</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>The model expressed as a json path that stores the answer to the question.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Condition__c</fullName>
        <description>An expression that determines whether the question should be displayed. No condition is treated as display always.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To access question fields, use &apos;q.{{QuestionTemplate.Code}}&apos; e.g. q.Transfer_Services === true.
To access store (global) fields use &apos;store.{{ModelPath}}&apos; e.g. store.Submission__c.BusinessUnit__c === &apos;AAA&apos;.</inlineHelpText>
        <label>Condition</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__DefaultValue__c</fullName>
        <description>The default value of the answer field.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Default value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the question as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__Hint__c</fullName>
        <description>Any help text or info note that can provide additional assitance while answering the question. Can be text or resource bundle (RB) key.  In case of RB key, the key must be maintained in the RB.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Hint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__InputStyleClass__c</fullName>
        <description>CSS style class to be applied on input part of question. e.g. col-md-12</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Input style class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LabelPosition__c</fullName>
        <description>Position of question label w.r.t answer field.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Label position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__LabelStyleClass__c</fullName>
        <description>CSS style class to be applied on label part of question. e.g. fs-6</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Label style class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Label__c</fullName>
        <description>The display label of the question. Can be text or resource bundle (RB) key.  In case of RB key, the key must be maintained in the RB.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__LovName__c</fullName>
        <description>The name of the picklist if the answer field is of type LOV.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lov name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Max__c</fullName>
        <description>The upper bound on the value of answer field it is of type NUMBER.</description>
        <label>Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Min__c</fullName>
        <description>The lower bound on the value of answer field it is of type NUMBER.</description>
        <label>Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OptionListStyleClass__c</fullName>
        <description>CSS style class to be applied on option (or choice) list (container) of a radio-group or checkbox-group question. e.g. row-cols-auto</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Option-list style class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Pattern__c</fullName>
        <description>If set, validates the answer against the pattern.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Placeholder__c</fullName>
        <description>Placeholder to be shown in the answer field. Can be text or resource bundle (RB) key.  In case of RB key, the key must be maintained in the RB.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Placeholder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__QuestionGroup__c</fullName>
        <description>Reference to parent group.</description>
        <label>Question Group</label>
        <referenceTo>tffa__QuestionGroupTemplate__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Readonly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set, the answer field is displayed as a read-only input. A read-only input cannot be modified. These answers are always prefilled based on some logic.</description>
        <label>Readonly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is it mandatory to capture answer.</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__SliderValueType__c</fullName>
        <description>Type of slider value.</description>
        <label>Slider value type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AnswerType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>The relative order of the question within the group.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Step__c</fullName>
        <description>Specifies the interval between legal numbers when capturing the answer value. Applicable to slider type of answer fields.</description>
        <label>Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__StyleClass__c</fullName>
        <description>Style classes (space delimited) to be added to the answer field in the UI.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Style class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Tooltip__c</fullName>
        <description>Tooltip to be shown in the answer field. Expressed as space delimited style classes.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tooltip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ValidationCondition__c</fullName>
        <description>An expression that determines whether the answer captured for the question is valid. The expression is expected to evaluate to a truthy value (true) if answer is valid, else false. If answer is not valid, the validation message is displayed as an error.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The expression is expected to evaluate to a truthy value (true) if answer is valid, else false. To access value of the answer, use &apos;value&apos; e.g. !value.includes(&apos;Gambling&apos;).</inlineHelpText>
        <label>Validation Condition</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__ValidationMessage__c</fullName>
        <description>The validation message displayed as an error if the answer is invalid (validation condition evaluates to false).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Supports interpolation of question text and answer value parameters in the message as {{label}} and {{value}} respectively.</inlineHelpText>
        <label>Validation Message</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <label>Question Template</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>